Add blake support

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,13 @@ Jeff Garzik <jgarzik@pobox.com>
 ArtForz
 
 pooler <pooler@litecoinpool.org>
+
+BlueDragon747
+
+1gh
+
+Neisklar
+
+prettyhatemachine
+
+LucasJones
