Add Freshcoin algo (fresh)
+ a small change to x13/14/15 which reduce a bit executable size

Signed-off-by: Tanguy Pruvot <tanguy.pruvot@gmail.com>

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ Version multi 1.0.4 (Tanguy Pruvot)
 
 - Add x13 x14 and x15 algos (Sherlockcoin, X14Coin, Webcoin..)
 - Add scrypt:N variants (Vertcoin)
+- Add fresh algo
 - Fix thread khashes/s value output
 - Add a configure option --disable-assembly
 
