NeoScrypt Support (simplified)
based on https://github.com/ghostlander/cpuminer-neoscrypt

with reduced changes in cpu-miner.c

Signed-off-by: Tanguy Pruvot <tanguy.pruvot@gmail.com>

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ Version multi 1.0.5 (Tanguy Pruvot)
 - Add --cputest parameter (debug)
 - Test and fix blake on NEOS, needs 14 rounds (was 8)
 - Add pentablake (5x blake256) (from bitbandi)
+- Add neoscrypt
 
 Version multi 1.0.4 (Tanguy Pruvot)
 
