Add support for windows (VC2013)
Fix some existing bugs :
 cryptonight hashrate log and lock when missing stratum diff

colors: enable colored output by default

and also trap signals on windows (Ctrl+C)

Current state: much slower than linux (and x64 almost twice the x86 speed)

Signed-off-by: Tanguy Pruvot <tanguy.pruvot@gmail.com>

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ Version multi 1.0.5 (Tanguy Pruvot)
 - Test and fix blake on NEOS, needs 14 rounds (was 8)
 - Add pentablake (5x blake256) (from bitbandi)
 - Add neoscrypt
+- Windows (VC++ 2013 build support)
 
 Version multi 1.0.4 (Tanguy Pruvot)
 
