--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 Version multi 1.0.5 (Tanguy Pruvot)
 
 - Merge remaining v2.4 cpu-miner changes
-- Add colored output (diable with --no-color)
+- Add colored output (disable with --no-color)
 - Test and fix blake on NEOS, needs 14 rounds (was 8)
 - Add pentablake (5x blake256) (from bitbandi)
 - Add neoscrypt
