stratum: show url and height on new blocks
and fix qubit difficulty

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 Version 1.0.7 (Tanguy Pruvot)
 - Add NIST5 and QUBIT algos
+- Show current stratum bloc height
 
 Version 1.0.6 (Tanguy Pruvot)
 - Fix scrypt algo
