blake: full rewrite with a midstate cache
speed increase by 2 (same logic as i made in ccminer)

Signed-off-by: Tanguy Pruvot <tanguy.pruvot@gmail.com>

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 1.0.8 (Tanguy Pruvot)
+- Rewrite blake algo (speed x2)
+
 Version 1.0.7 (Tanguy Pruvot)
 - Add NIST5 and QUBIT algos
 - Show current stratum bloc height
