--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+version 1.0.9 (Tanguy Pruvot)
+- pool extranonce substribe
+
 Version 1.0.8 (Tanguy Pruvot)
 - API Monitoring Support
 - Enhance config values support (int/real/bool)
