stratum: handle standard method if extranonce is ignored
seen on yamp.com pools

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
 version 1.0.9 (Tanguy Pruvot)
-- pool extranonce substribe
+- pool extranonce subscribe
 
 Version 1.0.8 (Tanguy Pruvot)
 - API Monitoring Support
