--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 version 1.0.9 (Tanguy Pruvot)
 - pool extranonce subscribe
+- upgrade jansson
 - lyra2 algo
 - fix for solo mining
 
@@ -282,7 +283,7 @@ Version 0.3.2 - December 23, 2010
 Version 0.3.1 - December 19, 2010
 
 - Critical fix for sha256_via
-- Retry JSON-RPC failures (see --retry, under "minerd --help" output)
+- Retry JSON-RPC failures (see --retry, under "--help" output)
 
 Version 0.3 - December 18, 2010
 
