api: add support for websocket calls
Allow to directly get api data in HTML5

Tested on Chrome... IE>=10 required but seems buggy on connection close...

Unlike what i made in ccminer (graph), the sample show summary data...

Signed-off-by: Tanguy Pruvot <tanguy.pruvot@gmail.com>

--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ version 1.0.9 (Tanguy Pruvot)
 - upgrade jansson
 - lyra2 algo
 - fix for solo mining
+- API websocket support
 
 Version 1.0.8 (Tanguy Pruvot)
 - API Monitoring Support
