--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+version 1.1-git (Tanguy Pruvot)
+- Add GroestlCoin and Diamond Groestl variants
+
 version 1.0.9 (Tanguy Pruvot)
 - pool extranonce subscribe
 - upgrade jansson
