--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
 version 1.1-git (Tanguy Pruvot)
-- Add GroestlCoin and Diamond Groestl variants
+- Add GroestlCoin, Diamond and Myriad variants
 
 version 1.0.9 (Tanguy Pruvot)
 - pool extranonce subscribe
