--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 version 1.1-git (Tanguy Pruvot)
 - Add GroestlCoin, Diamond and Myriad variants
+- Change some logged strings
+- Use all cores by default, not N-1
 
 version 1.0.9 (Tanguy Pruvot)
 - pool extranonce subscribe
