--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,7 @@ version 1.1-git (Tanguy Pruvot)
 - Handle a default config to run without params
 - add cpu-priority and cpu-affinity options
 - add NSIS installer script for windows setup
+- Implement background option on windows
 
 version 1.0.9 (Tanguy Pruvot)
 - pool extranonce subscribe
