--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
 version 1.1-git (Tanguy Pruvot)
+- Add basic API remote control (quit/seturl)
 - Add GroestlCoin, Diamond and Myriad variants
 - Change some logged strings
 - Use all cores by default, not N-1
