--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 version 1.1-git (Tanguy Pruvot)
 - Add basic API remote control (quit/seturl)
 - Add GroestlCoin, Diamond and Myriad variants
+- Add Pluck algo and fix gbt query crash
 - Change some logged strings
 - Use all cores by default, not N-1
 - Handle a default config to run without params
