Add double skein (skein2) algo for Woodcoin

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ version 1.1-git (Tanguy Pruvot)
 - Add basic API remote control (quit/seturl)
 - Add GroestlCoin, Diamond and Myriad variants
 - Add Pluck algo and fix gbt query crash
+- Add ZR5 algo (ZRC) and fix longpoll bug on linux
+- Add Skein2 algo (Double Skein for Woodcoin)
 - Change some logged strings
 - Use all cores by default, not N-1
 - Handle a default config to run without params
