Add dropcoin algo
dropcoin tested on bitspill pool

Note: This miner doesn't require --diff-factor 65535

Also add blake2s algo.. wanted to test octane but PoW period has ended

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,7 @@ version 1.1 (Tanguy Pruvot)
 - Add Luffa algo
 - Add Skein2 algo (Double Skein for Woodcoin)
 - Add Animecoin algo (Quark variant)
+- Add Dropcoin pok algo
 - Change some logged strings
 - Use all cores by default, not N-1
 - Handle a default config to run without params
