--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,7 @@ version 1.1 (Tanguy Pruvot)
 - Add Skein2 algo (Double Skein for Woodcoin)
 - Add Animecoin algo (Quark variant)
 - Add Dropcoin pok algo
+- Add BMW-256 (MDT) algo
 - Change some logged strings
 - Use all cores by default, not N-1
 - Handle a default config to run without params
@@ -14,6 +15,9 @@ version 1.1 (Tanguy Pruvot)
 - add NSIS installer script for windows setup
 - Implement background option on windows
 - add -m stratum option (diff-multiplier)
+- Time limit to allow benchmarks or cron jobs
+- Fix Cryptonight stratum support
+- Allow to disable extranonce support
 
 version 1.0.9 (Tanguy Pruvot)
 - pool extranonce subscribe
