--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Version 1.2
+- Add cryptonight-light (Aeon)
+
+TODO:
+- Lyra2v2, arm compat, multipool config
+
 version 1.1 (Tanguy Pruvot)
 - Add basic API remote control (quit/seturl)
 - Add GroestlCoin, Diamond and Myriad variants
