--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,8 @@
 Version 1.2
 - Add cryptonight-light (Aeon)
-
-TODO:
-- Lyra2v2, arm compat, multipool config
+- Add Lyra2REv2 algo (Vertcoin)
+- Algorithm parameter is now case insensitive
+- Checkup on arm, tested ok on Tegra K1 (CyanogenMod 12.1)
 
 version 1.1 (Tanguy Pruvot)
 - Add basic API remote control (quit/seturl)
