--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,11 @@
-Version 1.2
+Version 1.2 (Tanguy Pruvot)
 - Add cryptonight-light (Aeon)
 - Add Lyra2REv2 algo (Vertcoin)
 - Allow to load a remote config with curl
 - Algorithm parameter is now case insensitive
 - Drop anime algo (dead coin)
+- Add Sib(coin) algo
+- Compute and show network diff in pools too
 - Checkup on arm, tested ok on Tegra K1 (CyanogenMod 12.1)
 
 version 1.1 (Tanguy Pruvot)
