--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Version 1.3 (Tanguy Pruvot)
+- Add decred algo
+- Enhance Blake2-S
+
 Version 1.2 (Tanguy Pruvot)
 - Add cryptonight-light (Aeon)
 - Add Lyra2REv2 algo (Vertcoin)
