lbry sha/ripemd algo
beware, different data size and different stratum protocol (notify)

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 Version 1.3 (Tanguy Pruvot)
 - Add decred algo
+- Add lbry algo
 - Add x11evo algo
 - Enhance Blake2-S
 - Stratum benchmarks support
