--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Version 1.3 (Tanguy Pruvot)
 - Add decred algo
 - Add lbry algo
 - Add x11evo algo
+- Add x17 and xevan algos
+- Add veltor algo
 - Enhance Blake2-S
 - Stratum benchmarks support
 
