--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 Version 1.3.1 (WIP)
 - Add timetravel algo
+- Add --max-log-rate to limit per-core logs
 
 Version 1.3 (Tanguy Pruvot)
 - Add decred algo
