--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 1.3.2
+- Add bitcore algo
+
 Version 1.3.1 (Tanguy Pruvot)  26 Jan 2017
 - Add timetravel algo
 - Add --max-log-rate to limit per-core logs
