--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,10 @@
+Version 1.3.4
+- Add x12 algo
+- Add x16s algo
+
 Version 1.3.3
 - Add tribus algo
-- Add x12 algo
 - Add x16r algo
-- Add x16s algo
 - Add keccakc variant
 
 Version 1.3.2
