--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ Version 1.3.5
 - Add x16s algo
 - Add phi and phi2
 - Add sonoa
+- Handle new aeon cryptolight variant
 
 Version 1.3.3
 - Add tribus algo
