--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Version 1.3.6
+- Add lyra2v3 algo
+- Add blake2b algo
+- Add x20r algo
+- Add rainforest algo
+
 Version 1.3.5
 - Add allium algo
 - Add x12 algo
